# amazing

./: .config.example  .gitignore  Makefile  README.md  a_maze_ing.py  con.txt  config.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirement.txt  test.txt
src/: AMazeIng.py
src/amaz-lib/: __init__.py
src/amaz-lib/classes/: Cell.py
src/amaz-lib/generators/: kruskal.py
src/amaz_lib/: Cell.py  Maze.py  MazeGenerator.py  MazeSolver.py  __init__.py
src/amaz_lib/classes/: Cell.py  Maze.py
src/amaz_lib/generators/: kruskal.py
src/lib/class/: Cell.py
src/mazegen/: Cell.py  MazeGenerator.py  MazeSolver.py  __init__.py
src/parsing/: Parsing.py  __init__.py
test/: test_parsing.py
tests/: test_Cell.py  test_Depth.py  test_Maze.py  test_MazeGenerator.py  test_MazeSolver.py  test_parsing.py
tests/test_txt/: config_1.txt  error_2.txt  error_8.txt  error_9.txt
