[project]
name = "A-Maze-ing"
version = "0.1.0"
description = "This is the way"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]


[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "flake8>=7.3.0",
]


[tool.mypy]
python_version = "3.10"
exclude = [
  ".venv",
  "venv",
]
